app/globals.css
@import "tailwindcss";

@custom-variant dark (&:is(.dark *));

:root {
  --background: hsl(240, 18%, 97%);
  --foreground: oklch(0 0 0);
  --card: oklch(1 0 0);
  --card-foreground: oklch(0 0 0);
  --popover: oklch(1 0 0);
  --popover-foreground: oklch(0 0 0);
  --primary: oklch(0.9359 0.2226 120.3259);
  --primary-foreground: oklch(0 0 0);
  --secondary: oklch(0.699 0.1518 127.7234);
  --secondary-foreground: oklch(1 0 0);
  --muted: oklch(0.971 0.004 286.3255);
  --muted-foreground: oklch(0.5517 0.0138 285.9385);
  --accent: oklch(0.9359 0.2226 120.3259);
  --accent-foreground: oklch(0 0 0);
  --destructive: oklch(0.6368 0.2078 25.3313);
  --destructive-foreground: oklch(1 0 0);
  --border: oklch(0.9197 0.004 286.3202);
  --input: oklch(0.9197 0.004 286.3202);
  --ring: oklch(0.9359 0.2226 120.3259);
  --chart-1: oklch(0.9359 0.2226 120.3259);
  --chart-2: oklch(0.699 0.1518 127.7234);
  --chart-3: oklch(0 0 0);
  --chart-4: oklch(0.7118 0.0129 286.0665);
  --chart-5: oklch(0.2739 0.0055 286.0326);
  --sidebar: oklch(1 0 0);
  --sidebar-foreground: oklch(0 0 0);
  --sidebar-primary: oklch(0.9359 0.2226 120.3259);
  --sidebar-primary-foreground: oklch(0 0 0);
  --sidebar-accent: oklch(0.971 0.004 286.3255);
  --sidebar-accent-foreground: oklch(0 0 0);
  --sidebar-border: oklch(0.9197 0.004 286.3202);
  --sidebar-ring: oklch(0.9359 0.2226 120.3259);
  --font-sans: Urbanist, sans-serif;
  --font-serif: Urbanist, serif;
  --font-mono: monospace;
  --radius: 1.5rem;
  --shadow-x: 0;
  --shadow-y: 1px;
  --shadow-blur: 20px;
  --shadow-spread: 0px;
  --shadow-opacity: 0.05;
  --shadow-color: #000000;
  --shadow-2xs: 0 1px 20px 0px hsl(0 0% 0% / 0.03);
  --shadow-xs: 0 1px 20px 0px hsl(0 0% 0% / 0.03);
  --shadow-sm:
    0 1px 20px 0px hsl(0 0% 0% / 0.05), 0 1px 2px -1px hsl(0 0% 0% / 0.05);
  --shadow:
    0 1px 20px 0px hsl(0 0% 0% / 0.05), 0 1px 2px -1px hsl(0 0% 0% / 0.05);
  --shadow-md:
    0 1px 20px 0px hsl(0 0% 0% / 0.05), 0 2px 4px -1px hsl(0 0% 0% / 0.05);
  --shadow-lg:
    0 1px 20px 0px hsl(0 0% 0% / 0.05), 0 4px 6px -1px hsl(0 0% 0% / 0.05);
  --shadow-xl:
    0 1px 20px 0px hsl(0 0% 0% / 0.05), 0 8px 10px -1px hsl(0 0% 0% / 0.05);
  --shadow-2xl: 0 1px 20px 0px hsl(0 0% 0% / 0.13);
  --tracking-normal: 0em;
  --spacing: 0.25rem;
}

.dark {
  --background: oklch(0% 0 0);
  --foreground: oklch(100% 0.00011 271.152);
  --card: oklch(0.1822 0 0);
  --card-foreground: oklch(1 0 0);
  --popover: oklch(0.1822 0 0);
  --popover-foreground: oklch(1 0 0);
  --primary: oklch(0.9359 0.2226 120.3259);
  --primary-foreground: oklch(0 0 0);
  --secondary: oklch(0.699 0.1518 127.7234);
  --secondary-foreground: oklch(1 0 0);
  --muted: oklch(0.2264 0 0);
  --muted-foreground: oklch(0.7118 0.0129 286.0665);
  --accent: oklch(0.2264 0 0);
  --accent-foreground: oklch(1 0 0);
  --destructive: oklch(0.3958 0.1331 25.723);
  --destructive-foreground: oklch(1 0 0);
  --border: oklch(0.2739 0.0055 286.0326);
  --input: oklch(0.2739 0.0055 286.0326);
  --ring: oklch(0.9359 0.2226 120.3259);
  --chart-1: oklch(0.9359 0.2226 120.3259);
  --chart-2: oklch(0.699 0.1518 127.7234);
  --chart-3: oklch(1 0 0);
  --chart-4: oklch(0.4419 0.0146 285.7864);
  --chart-5: oklch(0.3703 0.0119 285.8054);
  --sidebar: oklch(0.1408 0.0044 285.8229);
  --sidebar-foreground: oklch(1 0 0);
  --sidebar-primary: oklch(0.9359 0.2226 120.3259);
  --sidebar-primary-foreground: oklch(0 0 0);
  --sidebar-accent: oklch(0.2264 0 0);
  --sidebar-accent-foreground: oklch(1 0 0);
  --sidebar-border: oklch(0.2739 0.0055 286.0326);
  --sidebar-ring: oklch(0.9359 0.2226 120.3259);
  --font-sans: Urbanist, sans-serif;
  --font-serif: Urbanist, serif;
  --font-mono: monospace;
  --radius: 1.5rem;
  --shadow-x: 0;
  --shadow-y: 1px;
  --shadow-blur: 30px;
  --shadow-spread: 0px;
  --shadow-opacity: 0.5;
  --shadow-color: #000000;
  --shadow-2xs: 0 1px 30px 0px hsl(0 0% 0% / 0.25);
  --shadow-xs: 0 1px 30px 0px hsl(0 0% 0% / 0.25);
  --shadow-sm:
    0 1px 30px 0px hsl(0 0% 0% / 0.5), 0 1px 2px -1px hsl(0 0% 0% / 0.5);
  --shadow:
    0 1px 30px 0px hsl(0 0% 0% / 0.5), 0 1px 2px -1px hsl(0 0% 0% / 0.5);
  --shadow-md:
    0 1px 30px 0px hsl(0 0% 0% / 0.5), 0 2px 4px -1px hsl(0 0% 0% / 0.5);
  --shadow-lg:
    0 1px 30px 0px hsl(0 0% 0% / 0.5), 0 4px 6px -1px hsl(0 0% 0% / 0.5);
  --shadow-xl:
    0 1px 30px 0px hsl(0 0% 0% / 0.5), 0 8px 10px -1px hsl(0 0% 0% / 0.5);
  --shadow-2xl: 0 1px 30px 0px hsl(0 0% 0% / 1.25);
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-destructive: var(--destructive);
  --color-destructive-foreground: var(--destructive-foreground);
  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--ring);
  --color-chart-1: var(--chart-1);
  --color-chart-2: var(--chart-2);
  --color-chart-3: var(--chart-3);
  --color-chart-4: var(--chart-4);
  --color-chart-5: var(--chart-5);
  --color-sidebar: var(--sidebar);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-ring: var(--sidebar-ring);

  --font-sans: var(--font-sans);
  --font-mono: var(--font-mono);
  --font-serif: var(--font-serif);

  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);

  --shadow-2xs: var(--shadow-2xs);
  --shadow-xs: var(--shadow-xs);
  --shadow-sm: var(--shadow-sm);
  --shadow: var(--shadow);
  --shadow-md: var(--shadow-md);
  --shadow-lg: var(--shadow-lg);
  --shadow-xl: var(--shadow-xl);
  --shadow-2xl: var(--shadow-2xl);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }
  body {
    @apply bg-background text-foreground;
  }
}

